; ModuleID = '/home/carl/AnghaBench/redis/deps/lua/src/extr_fpconv.c_fpconv_update_locale.c'
source_filename = "/home/carl/AnghaBench/redis/deps/lua/src/extr_fpconv.c_fpconv_update_locale.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"%g\00", align 1
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [46 x i8] c"Error: wide characters found or printf() bug.\00", align 1
@locale_decimal_point = common dso_local global i8 0, align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @fpconv_update_locale to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fpconv_update_locale() #0 {
  %1 = alloca [8 x i8], align 1
  %2 = getelementptr inbounds [8 x i8], [8 x i8]* %1, i64 0, i64 0
  %3 = call i32 @snprintf(i8* %2, i32 8, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), double 5.000000e-01)
  %4 = getelementptr inbounds [8 x i8], [8 x i8]* %1, i64 0, i64 0
  %5 = load i8, i8* %4, align 1
  %6 = sext i8 %5 to i32
  %7 = icmp ne i32 %6, 48
  br i1 %7, label %18, label %8

8:                                                ; preds = %0
  %9 = getelementptr inbounds [8 x i8], [8 x i8]* %1, i64 0, i64 2
  %10 = load i8, i8* %9, align 1
  %11 = sext i8 %10 to i32
  %12 = icmp ne i32 %11, 53
  br i1 %12, label %18, label %13

13:                                               ; preds = %8
  %14 = getelementptr inbounds [8 x i8], [8 x i8]* %1, i64 0, i64 3
  %15 = load i8, i8* %14, align 1
  %16 = sext i8 %15 to i32
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %13, %8, %0
  %19 = load i32, i32* @stderr, align 4
  %20 = call i32 @fprintf(i32 %19, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.1, i64 0, i64 0))
  %21 = call i32 (...) @abort() #3
  unreachable

22:                                               ; preds = %13
  %23 = getelementptr inbounds [8 x i8], [8 x i8]* %1, i64 0, i64 1
  %24 = load i8, i8* %23, align 1
  store i8 %24, i8* @locale_decimal_point, align 1
  ret void
}

declare dso_local i32 @snprintf(i8*, i32, i8*, double) #1

declare dso_local i32 @fprintf(i32, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
